# proc-macro-workshop

./: .gitignore  Cargo.toml  README.md  main.rs
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: checks.rs  lib.rs
bitfield/tests/: 08-non-power-of-two.stderr  11-bits-attribute-wrong.stderr
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 08-unrecognized-attribute.stderr
debug/: Cargo.toml
debug/src/: lib.rs
docs/proc-macro-tutorial/: 01-tokens.md  02-syn.md  03-quote.md  04-darling.md  05-heck.md  06-errors.md  README.md
docs/proc-macro-tutorial/examples/01-token-debug/: Cargo.toml
docs/proc-macro-tutorial/examples/01-token-debug/examples/: demo.rs
docs/proc-macro-tutorial/examples/02-parse-struct/: Cargo.toml
docs/proc-macro-tutorial/examples/02-parse-struct/examples/: demo.rs
docs/proc-macro-tutorial/examples/03-generate-impl/: Cargo.toml
docs/proc-macro-tutorial/examples/03-generate-impl/examples/: demo.rs
docs/proc-macro-tutorial/examples/04-darling-attrs/: Cargo.toml
docs/proc-macro-tutorial/examples/04-darling-attrs/examples/: demo.rs
docs/proc-macro-tutorial/examples/04-darling-attrs/src/: lib.rs
docs/proc-macro-tutorial/examples/05-case-convert/: Cargo.toml
docs/proc-macro-tutorial/examples/05-case-convert/examples/: demo.rs
docs/proc-macro-tutorial/examples/05-case-convert/src/: lib.rs
docs/proc-macro-tutorial/examples/06-error-handling/: Cargo.toml
docs/proc-macro-tutorial/examples/06-error-handling/examples/: demo.rs
docs/proc-macro-tutorial/examples/06-error-handling/src/: lib.rs  manual.rs
docs/proc_macro_tutorial/: 01-tokens.md  02-syn.md  03-quote.md  04-darling.md  05-heck.md  06-errors.md  07-pipeline.md  README.md
docs/proc_macro_tutorial/examples/01_token_debug/: Cargo.toml
docs/proc_macro_tutorial/examples/01_token_debug/examples/: demo.rs
docs/proc_macro_tutorial/examples/01_token_debug/src/: lib.rs
docs/proc_macro_tutorial/examples/02_parse_struct/: Cargo.toml
docs/proc_macro_tutorial/examples/02_parse_struct/examples/: demo.rs
docs/proc_macro_tutorial/examples/02_parse_struct/src/: lib.rs
docs/proc_macro_tutorial/examples/03_generate_impl/: Cargo.toml
docs/proc_macro_tutorial/examples/03_generate_impl/src/: lib.rs
docs/proc_macro_tutorial/examples/04_darling_attrs/: Cargo.toml
docs/proc_macro_tutorial/examples/04_darling_attrs/src/: lib.rs  manual.rs
docs/proc_macro_tutorial/examples/05_case_convert/: Cargo.toml
docs/proc_macro_tutorial/examples/06_error_handling/: Cargo.toml
docs/proc_macro_tutorial/examples/06_error_handling/examples/: demo.rs
docs/proc_macro_tutorial/examples/06_error_handling/src/: lib.rs
expanded-bin-tester/: Cargo.toml
expanded-bin-tester/src/: main.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 06-pattern-path.stderr
specs/001-proc-macro-implementations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-proc-macro-implementations/checklists/: requirements.md
specs/001-proc-macro-implementations/contracts/: bitfield.md  builder.md  debug.md  seq.md  sorted.md
specs/001-utilize-macro-crates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-utilize-macro-crates/checklists/: requirements.md
specs/001-utilize-macro-crates/contracts/: bitfield-patterns.md  builder-patterns.md  debug-patterns.md  seq-patterns.md  sorted-patterns.md
specs/002-proc-macro-tutorial/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-proc-macro-tutorial/checklists/: requirements.md
specs/002-proc-macro-tutorial/contracts/: 00-index.md  01-tokens.md  02-syn.md  03-quote.md  04-darling.md  05-heck.md  06-errors.md  06-pipeline.md  07-pipeline.md
(+1 files in other folders)
