[package]
name = "seq"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.108", features = ["diff"] }

[dependencies]
syn = { version = "2", features = ["parsing", "proc-macro", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
