[package]
name = "case-convert"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive", "parsing"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dev-dependencies]
case-convert = { path = "." }

